# groundpointdetection

./: .gitignore  GenerateData.ipynb  TODO.md  baseline.ipynb  bev.py  bev_new.py  data.py  dataloader.py  dataset.ipynb  deep_learning.ipynb  evaluation_baseline.csv  evaluation_baseline_standardscaled.csv  evaluation_baseline_without_standardscaler.csv  explore.ipynb  hard_coded_models.ipynb  homography_matrix.json  segmentation_filter.ipynb  test_package.ipynb  train.ipynb  train_and_evaluate.py  transforms.py  utils.py  visualizer.py
carla/: GenerateData bulk.ipynb  explore.ipynb  functions.py
carla_datagen/: .gitignore  GenerateData bulk.ipynb  GenerateData.ipynb  RecordPerspectives.ipynb  functions.py
data/: data.py  dataloader.py
groundpoint_estimators/: README.md  pyproject.toml
groundpoint_estimators/src/groundpoint_estimators/: utils.py
test/: explore.ipynb
test/asdf/: explore.ipynb
