[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groundpoint_estimators"
version = "0.0.1"
authors = [
  { name="Jakob Lachermeier", email="s-jlache@haw-landshut.de" },
]
description = "Groundpointdetection using convex hull cordinates."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "scikit-learn",
  "numpy",
  "joblib"
]
#dynamic = ["version"]

[project.urls]

[tool]
[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]

[tool.hatch.build.targets.wheel]
artifacts = [
  "*.joblib"
]

